@@ -38,6 +38,8 @@
   of unsigned types.
 - When a Java byte array is returned by a HOES call, a sleep byte string will 
   be created from this value.
+- fixed a deadlock issue with fork/wait with close being called on fork while
+  in the middle of a read.
 
 2.1-beta 4  (11 Sept 06)
 ===========
